# PixelCpp

./: .gitignore  CMakeLists.txt  PixelCpp.slnx  PixelCpp.vcxproj  PixelCpp.vcxproj.filters  README.md  abstractBackground.hpp  abstractBlock.hpp  abstractEnemies.hpp  abstractEnemy.hpp  abstractGameObject.hpp  abstractGameObjects.hpp  abstractInteractingWithPlayerGameObject.hpp  abstractXPatrolEnemy.hpp  bat.hpp  bricks.hpp  build.sh  camera.hpp  cannon.hpp  chest.hpp  cloudManager.hpp  coin.hpp  config.hpp  counters.hpp  direction.hpp  dirt.hpp  dragon.hpp  gameObjectWithDirectionMixin.hpp  heart.hpp  imageManager.hpp  images.hpp  ladder.hpp  levelManager.hpp  main.cpp  map.hpp  mapBackground.hpp  player.hpp  shield.hpp  skeleton.hpp  slug.hpp  (+10 more)
assets/: save.json
assets/levels/: 0.json  1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
common/: config.hpp  counters.hpp  direction.hpp  images.hpp  spriteWrapper.hpp
map/: camera.hpp  cloudManager.hpp  levelManager.hpp  map.hpp  mapBackground.hpp
map/objects/: bat.hpp  bricks.hpp  cannon.hpp  chest.hpp  coin.hpp  dirt.hpp  dragon.hpp  finish.hpp  ghost.hpp  heart.hpp  ladder.hpp  overlay.hpp  player.hpp  shield.hpp  skeleton.hpp  slug.hpp  spider.hpp  spike.hpp  tree.hpp  water.hpp  web.hpp
map/objects/abstract/: abstractBlock.hpp  abstractGameObject.hpp  abstractInteractingWithPlayerGameObject.hpp
